prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-nginx
  name: demo-nginx-svc
spec:
  type: LoadBalancer 
  ports:
  - port: 80
    protocol: TCP
      #    targetPort: 80
  selector:
    app: demo-nginx
